<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSortByLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_sort_by_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSortBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPopularityDSC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/popularity_descending"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPopularityASC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/popularity_ascending"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRatingDSC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/rating_descending"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRatingASC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/rating_ascending"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvReleaseDateDSC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/release_date_descending"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvReleaseDateASC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/release_date_ascending"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>